--- a/water.html
+++ b/water.html
@@ -10,26 +10,12 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="plants.html">Plants</a>
-      <a href="animals.html">Animals</a>
-      <a href="water.html">Water</a>
-      <a href="environment.html">Environment</a>
-      <a href="https://VISION-BOARD-20.claraakhlaghi.repl.co">VISION BOARD 2.0</a>
-    </div>
     <button onclick="myFunction()">im button</button>
     <p id="message"></p>
     <button onclick="myMove()">click me!!</button>
     <br>
     <br>
-    <img id="mothernature" src="mothernature.png" width="7%">
-
-<div>
-      <h1>Climate Reverse Uno Evolves to Love : C R U E L</h1>
-      <h2>This website is dedicated to helping our mother planet. Humans CRUEL practices towards the earth have lead to climate change and global warning so I want to raise awareness and discuss solutions.</h2>
-      <h3>I hope you enjoy!!  :))</h3>
-    </div>
+    <img id="raindrop" src="raindrop.png" width="7%">
     <h1 class="padding">supercalifragilisticexpialidocious</h1>
     <h2 class ="center">supercalifragilisticexpialidocious</h2>
     <h3 class ="left">supercalifragilisticexpialidocious</h3>
