i fixed the animations so they go left to right

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button onclick="myMove()">click me!!</button>
     <br>
     <br>
-    <img id="mothernature" src="mothernature.png" width="7%">
+    <img id="raindrop" src="mothernature.png" width="7%">
 
 <div>
       <h1>Climate Reverse Uno Evolves to Love : C R U E L</h1>
